--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ip": "1.1.0",
     "nicercast": "0.1.0",
     "nodetunes": "^0.3.0",
-    "sonos": "https://github.com/stephen/node-sonos.git#stephen-1.0.0"
+    "sonos": "https://github.com/KingTlMO/node-sonos.git"
   },
   "license": "MIT",
   "devDependencies": {
